--- a/index.css
+++ b/index.css
@@ -463,3 +463,13 @@ i[class*='van-type-'] {
     height: 100px;
     border-radius: 5px;
 }
+
+.not-found-container {
+    padding-inline: 26px;
+}
+
+.not-found-container .link-button {
+    width: 100%;
+    background-color: #161616;
+    color: white;
+}
