--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ html,
 body {
     margin: 0;
     padding: 0;
-    background-color: #fff7ed;
+    background-color: #FFF7ED;
     font-family: "Inter", sans-serif;
 }
 
@@ -47,14 +47,18 @@ header .site-logo {
 
 header a {
     text-decoration: none;
-    color: #4d4d4d;
+    color: #4D4D4D;
     font-weight: 600;
-    padding: 5px 20px;
+    padding: 5px 15px;
 }
 
 header a:hover {
     color: #161616;
     text-decoration: underline;
+}
+
+header button {
+    cursor: pointer;
 }
 
 header .login-icon {
@@ -77,7 +81,7 @@ main {
 
 footer {
     background-color: #161616;
-    color: #aaaaaa;
+    color: #AAAAAA;
     height: 74px;
     display: flex;
     flex-shrink: 0;
@@ -92,12 +96,12 @@ footer {
     text-align: center;
     text-decoration: none;
     border: none;
-    padding: 0.75rem 1.375rem;
+    padding: .75rem 1.375rem;
     color: initial;
     font-weight: 700;
     border-radius: 5px;
     cursor: pointer;
-    transition: transform 0.1s ease-in-out;
+    transition: transform .1s ease-in-out;
 }
 
 .back-button {
@@ -117,8 +121,7 @@ footer {
 
 /*** HOME PAGE ***/
 .home-container {
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.46), rgba(0, 0, 0, 0.46)),
-        url("./assets/images/home-hero.png") no-repeat center center;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.46), rgba(0, 0, 0, 0.46)), url("./assets/images/home-hero.png") no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -142,21 +145,22 @@ footer {
     display: inline-block;
     text-align: center;
     text-decoration: none;
-    background-color: #ff8c38;
+    background-color: #FF8C38;
     border: none;
     width: 100%;
     margin-top: 27px;
-    padding-block: 0.75rem;
+    padding-block: .75rem;
     color: white;
     font-weight: 700;
     border-radius: 5px;
     cursor: pointer;
-    transition: transform 0.1s ease-in-out;
+    transition: transform .1s ease-in-out;
 }
 
 .home-container a:hover {
     transform: translate(1px, 1px);
 }
+
 
 /*** ABOUT PAGE ***/
 .about-hero-image {
@@ -178,7 +182,7 @@ footer {
 }
 
 .about-page-cta {
-    background-color: #ffcc8d;
+    background-color: #FFCC8D;
     color: #161616;
     padding-inline: 32px;
     padding-bottom: 32px;
@@ -197,9 +201,10 @@ footer {
     border-radius: 10px;
 }
 
+
 /*** VAN PAGES ***/
 .van-list-container {
-    padding-inline: 23px;
+    padding-inline: 23px
 }
 
 .van-list-filter-buttons {
@@ -241,13 +246,13 @@ footer {
     font-weight: 500;
     border: none;
     border-radius: 5px;
-    background-color: #ffead0;
-    color: #4d4d4d;
+    background-color: #FFEAD0;
+    color: #4D4D4D;
     transition: 200ms all cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .van-type:hover {
-    color: #ffead0;
+    color: #FFEAD0;
 }
 
 .van-type:focus {
@@ -255,17 +260,17 @@ footer {
 }
 
 .van-type.selected {
-    color: #ffead0;
+    color: #FFEAD0;
 }
 
 .van-type.simple:hover,
 .van-type.simple.selected {
-    background-color: #e17654;
+    background-color: #E17654;
 }
 
 .van-type.rugged:hover,
 .van-type.rugged.selected {
-    background-color: #115e59;
+    background-color: #115E59;
 }
 
 .van-type.luxury:hover,
@@ -283,10 +288,10 @@ footer {
     border-radius: 5px;
     text-decoration: underline;
     background-color: transparent;
-    color: #4d4d4d;
+    color: #4D4D4D;
 }
 
-i[class*="van-type-"] {
+i[class*='van-type-'] {
     padding: 7px 14px;
 }
 
@@ -336,7 +341,7 @@ i[class*="van-type-"] {
 }
 
 .van-detail .link-button {
-    background-color: #ff8c38;
+    background-color: #FF8C38;
     color: white;
     font-size: 1.125rem;
 }
@@ -348,7 +353,7 @@ i[class*="van-type-"] {
 
 .host-nav a {
     text-decoration: none;
-    color: #4d4d4d;
+    color: #4D4D4D;
     font-weight: 500;
     padding: 5px 20px;
 }
@@ -377,17 +382,14 @@ i[class*="van-type-"] {
     align-items: center;
     background-color: white;
     margin-bottom: 15px;
-    padding: 18px 24px;
+    padding-block: 18px;
+    padding-left: 24px;
 }
 
 .host-van-single>img {
     height: 70px;
     border-radius: 5px;
     margin-right: 17px;
-}
-
-.host-van-info {
-    margin-right: auto;
 }
 
 .host-van-info h3 {
@@ -436,14 +438,14 @@ i[class*="van-type-"] {
 
 .host-van-detail-nav a {
     text-decoration: none;
-    color: #4d4d4d;
+    color: #4D4D4D;
     font-weight: 500;
     padding: 5px 20px;
 }
 
 .host-van-detail-nav a:first-of-type {
     text-decoration: none;
-    color: #4d4d4d;
+    color: #4D4D4D;
     font-weight: 500;
     padding: 5px 15px;
     margin-left: -15px;
@@ -472,7 +474,7 @@ i[class*="van-type-"] {
 
 .host-van-price>span {
     font-size: 16px;
-    color: #4d4d4d;
+    color: #4D4D4D;
 }
 
 .host-van-detail-image {
@@ -527,14 +529,13 @@ i[class*="van-type-"] {
 }
 
 .login-form>button {
-    background-color: #ff8c38;
+    background-color: #FF8C38;
     border: none;
     border-radius: 6px;
     height: 55px;
     margin-top: 22px;
     color: white;
     font-family: "Inter", sans-serif;
-    cursor: pointer;
 }
 
 .login-form>button:disabled {
@@ -542,8 +543,8 @@ i[class*="van-type-"] {
     cursor: not-allowed;
 }
 
-.login-error {
-    color: red;
+.red {
+    color: #cc0000;
 }
 
 .host-dashboard-earnings {
